--- a/Geisha.cabal
+++ b/Geisha.cabal
@@ -19,13 +19,16 @@ library
                      , Geisha.Lexer
                      , Geisha.AST
                      , Geisha.Error
-                     , Geisha.Codegen
+                     , Geisha.Codegen.LLVM
+                     , Geisha.Codegen.Emit
+                     , Geisha.Codegen.Primitive
   build-depends:       base >= 4.7 && < 5
                      , parsec
                      , mtl
                      , containers
                      , hashmap
                      , llvm-general-pure
+                     , llvm-general
   default-language:    Haskell2010
 
 executable Geisha-exe
@@ -36,6 +39,8 @@ executable Geisha-exe
                      , mtl
                      , Geisha
                      , haskeline
+                     , llvm-general-pure
+                     , llvm-general
   default-language:    Haskell2010
 
 test-suite Geisha-test
