--- a/stack.yaml
+++ b/stack.yaml
@@ -2,11 +2,10 @@ flags: {}
 extra-package-dbs: []
 packages:
 - '.'
-# - 'llvm-general-pure'
-# - 'llvm-general'
+# - llvm-general-pure
+# - llvm-general
 extra-deps:
-# - cabal-helper-0.6.3.1
+- hashmap-1.3.2
 - llvm-general-pure-3.5.1.0
 - llvm-general-3.5.1.2
-# - cabal-helper-0.7.3.0
-resolver: lts-3.5
+resolver: lts-6.9
