--- a/Geisha.cabal
+++ b/Geisha.cabal
@@ -2,12 +2,12 @@ name:                Geisha
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/Geisha#readme
-license:             BSD3
+homepage:            https://github.com/nameoverflow/Geisha
+license:             WTFPL
 license-file:        LICENSE
-author:              Author name here
+author:              Hcyue
 maintainer:          example@example.com
-copyright:           2017 Author name here
+copyright:           2017 Hcyue
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
@@ -61,4 +61,4 @@ test-suite Geisha-test
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/Geisha
+  location: https://github.com/nameoverflow/Geisha
